# swing-tracker

./: .dockerignore  .env.example  .gitignore  .impeccable.md  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-09-whatif-page.md  2026-07-10-whatif-phase2.md  2026-07-24-allocation-rebalance.md
docs/superpowers/specs/: 2026-07-09-whatif-page-design.md  2026-07-10-whatif-phase2-design.md  2026-07-24-allocation-rebalance-design.md
scripts/: backtest_liquid.py  bench_cache_parallel.py  profile_scanner.py  rebuild_universe.py
src/swing_tracker/: __init__.py  config.py  main.py  whatif_backfill.py
src/swing_tracker/backtest/: __init__.py  __main__.py  data.py  engine.py  exits.py  metrics.py  models.py  runner.py
src/swing_tracker/bot/: telegram.py
src/swing_tracker/core/: allocation.py  allocation_service.py  etf_prices.py  monitor.py  ohlcv_cache.py  portfolio.py  scanner.py  signals.py  strategy.py  universe.py  whatif.py  whatif_store.py
src/swing_tracker/db/: connection.py  repository.py  schema.py
tests/: test_allocation.py  test_allocation_notify.py  test_allocation_router.py  test_allocation_service.py  test_cash_summary.py  test_config_allocation.py  test_etf_prices.py  test_main_allocation_job.py  test_ohlcv_cache.py  test_price_cache.py  test_repository_allocation.py  test_scanner_liquidity.py  test_signal_logging.py  test_telegram_chunking.py  test_universe.py  test_web_helpers.py  test_whatif.py  test_whatif_store.py  test_yakin_labels.py
(+31 files in other folders)
